Se actualiza ofertaacademica.html

--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -266,7 +266,7 @@
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Educación Inicial</h2>
-          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>1
+          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
         </div>
         <div class="enlace-carrera">
           <a href="/carreras/universitarias/inicial.html">Conoce Más</a>
