Se actualiza index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </select>
     </div>
       
-      <button class="btnenviar" onclick="sendToWhatsApp();" type="button">Enviar</button>
+      <button class="btnenviarindex" onclick="sendToWhatsApp();" type="button">Enviar</button>
 
     </form>
   </section>
