--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -36,22 +36,23 @@
       
       <nav class="sub-menu text-center contenedor navbar">
         <a href="index.html"><img src="assets/images/home1.png" alt="iconoInicio"></a>
-        <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown1"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
-            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACIÓN CONTINUA</a></li>
+            <li><a href="formacion-continua.html">POSGRADOS</a></li>    
           </ul>
         </li>
-        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADÉMICA<i class="bi bi-chevron-down"></i></a>
           <!--<ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li>
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a>
+        <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
-        <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
+        <a href="https://bolivarianovirtual.com/login/index.php">EVA BOLIVARIANO ONLINE</a>
       </nav>
       
     </div>
@@ -66,19 +67,20 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
-            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACIÓN CONTINUA</a></li>
+            <li><a href="formacion-continua.html">POSGRADOS</a></li>   
           </ul>
         </li>
-        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADÉMICA<i class="bi bi-chevron-down"></i></a>
           <!--<ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="matriculate-online.php">MATRICULATE ONLINE</a>
+        <a href="matriculate-online.php">MATRICÚLATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
-        <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
+        <a href="https://bolivarianovirtual.com/login/index.php">EVA BOLIVARIANO ONLINE</a>
       </ul>  
     </div>
 
