Se arreglaron los enlaces que estaban erroneos

--- a/carreras/universitarias/contabilidad.html
+++ b/carreras/universitarias/contabilidad.html
@@ -127,7 +127,8 @@
           <ul> 
             <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
             <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
-            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
+            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li> 
+            <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>            
           </ul>
         </li>
         <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
