Se realiza combios pedidos por el cliente

--- a/carreras/diplomados/cuidadospacientecritico.html
+++ b/carreras/diplomados/cuidadospacientecritico.html
@@ -145,11 +145,11 @@
         <div class="texto-esp text-center">
           <h2>DIPLOMADO EN CUIDADOS DE ENFERMERÍA
             EN EL PACIENTE CRÍTICO</h2>
-          <p>Este programa de formación está
+          <!--<p>Este programa de formación está
             diseñado para capacitar a los estudiantes con los
             conocimientos teóricos y prácticos necesarios para enfrentar
             los desafíos únicos que implica el cuidado de pacientes en
-            situaciones críticas.</p>
+            situaciones críticas.</p>-->
           <h3 class="text-center">“EN LA UNIDAD DE CUIDADOS
             INTENSIVOS, CADA ACCIÓN DE
             ENFERMERÍA PUEDE MARCAR
@@ -226,7 +226,7 @@
     <div class="detalle">
         <h3 class="titulo-click">DURACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <p>4 MESES (120 DÍAS)</p>
+            <p>3 MESES (90 DÍAS)</p>
         </div>
     </div>
     <div class="detalle">
