--- a/carreras/diplomados/gestion-proyectos.html
+++ b/carreras/diplomados/gestion-proyectos.html
@@ -143,11 +143,11 @@
 
         <div class="texto-esp text-center">
           <h2>DIPLOMADO EN GESTION DE PROYECTOS</h2>
-          <p>En un entorno empresarial cada vez más competitivo y cambiante, los
+          <!--<p>En un entorno empresarial cada vez más competitivo y cambiante, los
             proyectos exitosos requieren algo más que habilidades técnicas. Los
             líderes de proyectos necesitan saber cómo coordinar equipos,
             administrar recursos, gestionar riesgos y comunicarse ecazmente con
-            las partes interesadas.</p>
+            las partes interesadas.</p>-->
           <h3 class="text-center">"EL MAYOR ACTIVO DE UN
             PROYECTO EXITOSO ES EL EQUIPO
             DETRÁS DE ÉL: PERSONAS
@@ -224,7 +224,7 @@
     <div class="detalle">
         <h3 class="titulo-click">DURACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <p>4 MESES (120 DÍAS)</p>
+            <p>3 MESES (90 DÍAS)</p>
         </div>
     </div>
     <div class="detalle">
