--- a/carreras/diplomados/instrumentacion.html
+++ b/carreras/diplomados/instrumentacion.html
@@ -144,12 +144,12 @@
 
         <div class="texto-esp text-center">
           <h2>DIPLOMADO EN INSTRUMENTACIÓN QUIRÚRGICA</h2>
-          <p>La instrumentación quirúrgica es una disciplina esencial en el
+          <!--<p>La instrumentación quirúrgica es una disciplina esencial en el
             campo de la medicina y la cirugía. Los instrumentistas quirúrgicos,
             también conocidos como técnicos en instrumentación quirúrgica o
             asistentes quirúrgicos, son profesionales altamente capacitados
             que juegan un papel fundamental en el éxito de los procedimientos
-            quirúrgicos.</p>
+            quirúrgicos.</p>-->
           <h3 class="text-center">"UN BUEN INSTRUMENTISTA QUIRÚRGICO
             ES MUCHO MÁS QUE UN ASISTENTE; ES
             UN SOCIO ESTRATÉGICO EN EL CAMPO
@@ -224,7 +224,7 @@
     <div class="detalle">
         <h3 class="titulo-click">DURACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <p>4 MESES (120 DÍAS)</p>
+            <p>3 MESES (90 DÍAS)</p>
         </div>
     </div>
     <div class="detalle">
