--- a/carreras/universitarias/admempresas.html
+++ b/carreras/universitarias/admempresas.html
@@ -217,8 +217,8 @@
     <div class="detalle">
         <h3 class="titulo-click">DETALLE DE LA CARRERA<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <p>Duración 3 años  
-              (6 ciclos de estudio) 
+            <p>Duración 2 años y medio  
+              (5 ciclos de estudio)
               </p>
         </div>
     </div>
@@ -238,19 +238,26 @@
     <div class="detalle">
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <!--<ul>
-                <li><span>MÓDULO 1:</span> LUDOTERAPIA PARA ADULTOS MAYORES</li>
-                <li><span>MÓDULO 2:</span> CUIDADOS PALIATIVOS EN EL ADULTO MAYOR</li>
-                <li><span>MÓDULO 3:</span> PREVENCIÓN DE ENFERMEDADES, SALUD Y NUTRICIÓN</li>
-                <li><span>MÓDULO 4:</span> FISIOTERAPIA EN EL CUIDADO DEL ADULTO MAYOR</li>
-            </ul>-->
+          <p>
+            Los graduados pueden optar por las oportunidades laborales en las
+empresas de diferentes áreas e instituciones gubernamentales y organizaciones
+no gubernamentales relacionadas con el ámbito empresarial
+y comercial. Los beneficios de disponer este tipo de profesionales
+permiten al sector empresarial disponer talento humano que se enfoque
+en: gestión de procesos y gastos, operaciones comerciales,
+métricas de desempeño. Las soluciones de inteligencia de negocios
+son ideales para el procesamiento eficiente de información en los
+negocios que facilitan asumir decisiones efectivas; su funcionamiento
+permite un uso por un mayor número de usuarios potenciales dentro
+de una organización.
+          </p>
         </div>
     </div>
   </div>
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/empresas.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
