--- a/carreras/universitarias/contabilidad.html
+++ b/carreras/universitarias/contabilidad.html
@@ -137,12 +137,12 @@
 
   </header>
 
-  <section class="tecnologia-innovacion">
+  <section class="tecnologia-cont">
     <div class="contenido-oferta">
 
       <div class="form-texto">
 
-        <div class="texto-esp text-center">
+        <div class="texto-esp text-center conta">
           <h2>CONTABILIDAD</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
@@ -154,7 +154,7 @@
             SOCIEDAD”</h3>-->
         </div>
   
-        <div class="reg-informacion">
+        <div class="reg-informacion form-conta">
   
           <h3 class="text-center">MAS INFORMACIÓN</h3>
       
