--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -141,7 +141,7 @@
 
         <div class="texto-esp text-center">
           <h2>CARRERAS UNIVERSITARIAS</h2>
-          <p>Disponemos 7 carreras en línea en Tecnología Superior Universitaria, con docentes Internacionales y nacionales que te guiarán en este apasionante mundo de la educación online.</p>
+          <p>7 carreras en línea en Tecnología Superior Universitaria, con docentes Internacionales y nacionales que te guiarán en este apasionante mundo de la educación online.</p>
           <h3 class="text-center">LO QUE SUEÑAS</h3>
           <h3 class="text-center">LO QUE QUIERES SER</h3>
         </div>
