Se actualiza el modulo de matriculate online

--- a/carreras/universitarias/salud.html
+++ b/carreras/universitarias/salud.html
@@ -243,19 +243,25 @@
     <div class="detalle">
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <!--<ul>
-                <li><span>MÓDULO 1:</span> LUDOTERAPIA PARA ADULTOS MAYORES</li>
-                <li><span>MÓDULO 2:</span> CUIDADOS PALIATIVOS EN EL ADULTO MAYOR</li>
-                <li><span>MÓDULO 3:</span> PREVENCIÓN DE ENFERMEDADES, SALUD Y NUTRICIÓN</li>
-                <li><span>MÓDULO 4:</span> FISIOTERAPIA EN EL CUIDADO DEL ADULTO MAYOR</li>
-            </ul>-->
+          <p>
+            Los profesionales están capacitados para desempeñarse en áreas
+como la planificación y gestión de recursos, organización de servicios
+de salud, normativa y regulación del sector, calidad y seguridad
+en la atención médica. Desarrolla habilidades en la gestión de
+personal, optimización de recursos, elaboración y análisis de presupuestos,
+implementación de políticas de salud pública y aplicación
+de tecnologías de la información en el ámbito sanitario. Ejerce
+funciones en hospitales, clínicas, centros de atención primaria,
+instituciones gubernamentales y organizaciones no gubernamentales
+relacionadas con la salud.
+          </p>  
         </div>
     </div>
   </div>
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/salud.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
