--- a/carreras/universitarias/inicial.html
+++ b/carreras/universitarias/inicial.html
@@ -63,7 +63,7 @@
                 </li>
                 
                 <li class="submenu-secciones">
-                  <h6>CIENCIAS SOCIALES</h6>
+                  <h6>CIENCIAS DE LA EDUCACIÓN</h6>
                   <ul>
                     <li><a href="/carreras/universitarias/inicial.html">Educación Inicial</a></li> 
                     <li><a href="/carreras/universitarias/basica.html">Educación Básica</a></li>
