Se actualiza las paginas y se repara bugs de algunas paginas

--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -43,7 +43,7 @@
             <li><a href="formacion-continua.html">POSGRADOS</a></li>    
           </ul>
         </li>
-        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADÉMICA<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADÉMICA<!--<i class="bi bi-chevron-down"></i>--></a>
           <!--<ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li>
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
@@ -89,13 +89,17 @@
 
   <section class="metodologia-estudio">
     <div>
-      <img src="/assets/images/img-carreras/MetodologiaEstudiopri.jpeg" alt="principal">
+      <img src="/assets/images/fondo/fondoME.png" alt="principal">
       <img src="/assets/images/banner/MetodologiaEstudiobanner.jpeg" alt="banner">
     </div>
   </section>
 
   <main class="seccion">
-    <h1 class="text-center text-main">NUESTRA IDENTIDAD</h1>
+    <div>
+      <img src="/assets/images/metodologia1.png" alt="metodologia">
+      <img src="/assets/images/metodologia2.png" alt="metodologia">
+    </div>
+    <!--<h1 class="text-center text-main">NUESTRA IDENTIDAD</h1>
     <div class="gen-acordeon">
       <div class="nos-contenido img-acordeon">
         <h2>AUTORIDADES IUB</h2>
@@ -205,7 +209,7 @@
               </ul>
             </div>
           </div>
-      </div>
+      </div>-->
         
     </div>
     
