--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -50,7 +50,7 @@
           </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
+        <a href="http://bolivarianonline.atwebpages.com/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">EVA BOLIVARIANO ONLINE</a>
       </nav>
