--- a/carreras/diplomados/gestion-proyectos.html
+++ b/carreras/diplomados/gestion-proyectos.html
@@ -96,7 +96,7 @@
 
           <ul>
             <li>
-              <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
+              <a href="http://bolivarianonline.atwebpages.com/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
             </li>
           </ul>
           
