--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>-->
           </li>
           <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-          <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
+          <a href="http://bolivarianonline.atwebpages.com/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
           <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
           <a href="https://bolivarianovirtual.com/login/index.php">EVA BOLIVARIANO ONLINE</a>
 
@@ -86,7 +86,7 @@
           </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="matriculate-online.html">MATRICÚLATE ONLINE</a>
+        <a href="bolivarianonline.atwebpages.com/matriculate-online.php" target="_blank">MATRICÚLATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php" target="_blank">EVA BOLIVARIANO ONLINE</a>
       </ul>  
